Fix dropdown caret overlap

--- a/src/web/app/components/question-submission-form/question-submission-form.component.scss
+++ b/src/web/app/components/question-submission-form/question-submission-form.component.scss
@@ -54,3 +54,7 @@
 .collapse-caret {
   margin-right: 10px;
 }
+
+.select-flex {
+  flex: 1 0 0%;
+}
